tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_deny_capturing_mut_variable_without_reference_in_nested_lambda/execute__tests__noirc_frontend_tests_deny_capturing_mut_variable_without_reference_in_nested_lambda_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Mutable variable x captured in lambda must be a mutable reference
  ┌─ src/main.nr:6:17
  │
6 │                 x += 2;
  │                 - Use '&mut' instead of 'mut' to capture a mutable variable.
  │

Aborting due to 1 previous error
